<resources>
    <string name="app_name">IOU</string>
    <string name="btnText">Create Notification</string>
    <string name="strNotification2">Send Notification with actions</string>
    <string name="strNotificationAction1">Send SMS</string>
    <string name="strNotificationAction2">Remind Me Later</string>
    <string name="strDebtTitle">Title</string>
    <string name="strName">Name</string>
    <string name="strToFrom">To</string>
    <string name="strComment">Comments</string>
    <string name="strDebtTotal">Debt Total</string>
    <string name="strDebtPayment">Debt Payment</string>
    <string name="strConfirm">Confirm</string>
    <string name="undo_string">Undo</string>
    <string name="title_activity_add_debt">Add Debt</string>
    <string name="add_new_debt">Add New Debt</string>
    <string name="select_contact">Select Contact</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="amount">Amount:</string>
    <string name="select_date">Select Date</string>
    <string name="lunch">Lunch</string>
    <string name="dollar_amount_hint">$15</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Name&#8230;</string>
    <string name="enter_number">Enter Number&#8230;</string>
    <string name="select_time">Select Time</string>
    <string name="they_owe">They owe</string>
    <string name="i_owe">I owe</string>
</resources>
